# piche_tech_task

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README  build.bat  run_docker.bat
Sources/: main.cpp
Sources/base/Configuration/: config.hpp
Sources/base/Core/: InputManager.cpp  InputManager.hpp  Launcher.cpp  Launcher.hpp  ScreenshotManager.cpp  ScreenshotManager.hpp  UserActivityManager.cpp  UserActivityManager.hpp
Sources/base/Handlers/: ActivityHandler.cpp  ActivityHandler.hpp  InputHandler.cpp  InputHandler.hpp  ScreenshotHandler.cpp  ScreenshotHandler.hpp
Sources/base/Modifiers/: ImageModifier.cpp  ImageModifier.hpp
Sources/platform/win/Core/: InputManagerSpecific.cpp  InputManagerSpecific.hpp  LauncherSpecific.cpp  LauncherSpecific.hpp
Sources/platform/win/Handlers/: ActivityHandlerSpecific.cpp  ActivityHandlerSpecific.hpp  KeyboardInputHandler.cpp  KeyboardInputHandler.hpp  MouseInputHandler.cpp  MouseInputHandler.hpp  ScreenshotHandlerSpecific.cpp  ScreenshotHandlerSpecific.hpp
Sources/platform/win/Modifiers/: ImageModifierSpecific.cpp  ImageModifierSpecific.hpp
Sources/utils/: EventHandler.cpp  EventHandler.hpp  ISubscriber.hpp  ThreadPool.cpp  ThreadPool.hpp  logger.cpp  logger.hpp
